# E-Start

./: README.md  index.html  package.json  vite.config.ts
contextmenudll/: CMakeLists.txt  ExplorerCommand.cpp
contextmenudll/src/: ContextMenu.idl  ContextMenuCommand.cpp  ContextMenuCommand.h
e/: code.bak  code.e
src/: code.tsx  main.tsx  typings.d.ts
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/Appx/: Tuyang.易码助手.yaml  Tuyang.易语言项目管理器.yaml
src-tauri/Appx/Tuyang.EManager_1.3.0.0_x64__nj9tzd3nfrhfw/: AppxBlockMap.xml  AppxManifest.xml  Resources.pri  [Content_Types].xml
src-tauri/E_dev/: Cmd.e  Dll.e  E-Manager_Code.fne  Mods.e  Window.e  Window_main.e
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  store.rs
src/TitleBar/: AnimatedTitle.tsx  Logo.tsx  LogoTitle.tsx  Navigation.tsx  TitleButton.tsx  index.tsx  useNavigationState.tsx
src/mod/: BlurredBackground.tsx  FileGet.ts  RouteWrapper.tsx  ThemeConfig.ts  Variants.ts  WindowCode.ts  createAndClickLink.ts  extractDirectoryPath.ts  fuzzySearch.ts  openStoreRating.ts  store.ts  useMsStoreApp.ts  verifyWithWebAuthn.ts
src/page/: App.css  App.less  App.tsx  Content.tsx
src/page/about/: THIRD_PARTY_LICENSES.tsx  author.tsx  index.tsx
src/page/home/: File.tsx  index.tsx  openBtn.tsx
src/page/home/Table/: Filelist.tsx  RenderingList.tsx  addTab.tsx  addstart.tsx  columns.tsx  onDropdown.ts  upStar.ts
src/page/linkLite/: LinkData.ts  index.tsx
src/page/settings/: CardOption.tsx  RenderOptions.tsx  SearchBox.tsx  Section.tsx  SettingsNav.tsx  index.tsx  types.ts
src/page/settings/categories/: ThemeSettings.tsx  Touch.tsx  assistant.tsx  storage.tsx
src/page/settings/categories/com/: FontAutoComplete.tsx
src/page/tool/: index.tsx
src/page/tool/JSONTreeTool/: index.tsx  translateJsonError.ts
src/page/tool/PasswordGenerator/: index.tsx
src/page/tool/QRCode.tsx/: index.tsx
src/page/tool/convertCode/: index.tsx
src/page/tool/des/: index.tsx
src/page/tool/http/: RequestForm.tsx  ResponseView.tsx  httpTypes.ts  httpUtils.ts  index.tsx  useHttpClient.ts
src/page/tool/moment/: index.tsx
src/page/tool/regular/: index.tsx  regexPresets.ts
